Gradle build redesign